@startuml
skinparam linetype ortho

entity AnidoptUser {
    *Id : string <<PK>>
    --
    *FirstName : string
    *LastName : string
    *UserName : string
    *Email : string
    --
}
entity Animal {
    *Id : int <<PK>>
    --
    *Name : string
    *BirthDay : DateTime
    *Description : string
    *Height : float
    *Weight : float
    --
    *OrganisationId : int <<FK>>
    *BreedId : int <<FK>>
    *SexId : int <<FK>>
}
entity AnimalColour {
    *Id : int <<PK>>
    --
    *Colour : string
    --
}
entity AnimalColourLink {
    *Id : int <<PK>>
    --
    --
    *AnimalId : int <<FK>>
    *ColourId : int <<FK>>
}
entity Breed {
    *Id : int <<PK>>
    --
    *Name : string
    --
    *SpeciesId : int <<FK>>
}
entity Descriptor {
    *Id : int <<PK>>
    --
    *Name : string
    --
    *DescriptorTypeId : int <<FK>>
}
entity DescriptorLink {
    *Id : int <<PK>>
    --
    --
    *AnimalId : int <<FK>>
    *DescriptorId : int <<FK>>
}
entity DescriptorType {
    *Id : int <<PK>>
    --
    *Name : string
    --
}
entity Estimation {
    *Id : int <<PK>>
    --
    *Height : float
    *Weight : float
    --
    *BreedId : int <<FK>>
    *SexId : int <<FK>>
}
entity Organisation {
    *Id : int <<PK>>
    --
    *Name : string
    --
}
entity Picture {
    *Id : int <<PK>>
    --
    *Name : string
    *Description : string
    *Image : byte[]
    *Position : int
    --
    *AnimalId : int <<FK>>
}
entity Sex {
    *Id : int <<PK>>
    --
    *Name : string
    --
}
entity Species {
    *Id : int <<PK>>
    --
    *Name : string
    --
}
entity UserOrganisationLink {
    *Id : int <<PK>>
    --
    *IsAdmin : bool
    --
    *UserId : string <<FK>>
    *OrganisationId : int <<FK>>
}

AnidoptUser ||--o{ UserOrganisationLink
UserOrganisationLink }o--|| Organisation
Animal }o--|| Breed
Animal }o--|| Sex
Species ||--o{ Breed
Organisation ||--o{ Animal
AnimalColour ||--o{ AnimalColourLink
Animal ||--o{ AnimalColourLink
Picture }o--|| Animal
Descriptor ||--o{ DescriptorLink
Descriptor }o--|| DescriptorType
DescriptorLink }o--|| Animal
Estimation }o--|| Sex
Estimation }o--|| Breed
@enduml
